--- a/src/main/webapp/partials/login.html
+++ b/src/main/webapp/partials/login.html
@@ -1,4 +1,4 @@
+<input
+    ng-model="datosFormulario.usuario"/>
 
-<body>
-    <div>TODO write content</div>
-</body>
+<button type="button" class="btn btn-default" ng-click="login()">Enviar</button>
